# juniauto

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.engine  README.md  docker-compose.yml  docker-entrypoint.sh
config/: production.yaml  questdb.conf
docs/knowledge-base/: README.md  glossary.md  part1-data-preparation.md  part2-signals-bayesian.md  part3-costs.md  part4-gateway-execution.md  part5-shadow-and-replay.md  part6-operational.md
engine/: CMakeLists.txt
engine/include/juniauto/bayesian/: regression.hpp
engine/include/juniauto/costs/: model.hpp
engine/include/juniauto/data/: features.hpp  pipeline.hpp
engine/include/juniauto/gateway/: decision.hpp
engine/include/juniauto/portfolio/: sizing.hpp
engine/include/juniauto/utils/: math.hpp  stats.hpp  time.hpp
engine/src/api/: alpaca_client.cpp
engine/src/bayesian/: posterior.cpp  regression.cpp  shrinkage.cpp
engine/src/bindings/: pybind_module.cpp
engine/src/costs/: impact.cpp  model.cpp  slippage.cpp  spread.cpp
engine/src/data/: features.cpp  freshness.cpp  pipeline.cpp
engine/src/gateway/: action.cpp  decision.cpp  friction.cpp
engine/src/portfolio/: constraints.cpp  covariance.cpp  sizing.cpp
engine/src/utils/: math.cpp  stats.cpp  time.cpp
engine/tests/unit/: CMakeLists.txt  test_costs.cpp  test_gateway.cpp
grafana/dashboards/: juniauto-decisions.json  juniauto-main.json
grafana/provisioning/dashboards/: provider.yaml
grafana/provisioning/datasources/: datasources.yaml
orchestrator/: pyproject.toml  requirements.txt
orchestrator/juniauto/: __init__.py  config.py  main.py
orchestrator/juniauto/data/: __init__.py  aggregator.py  alpaca_feed.py  universe.py  yahoo_feed.py
orchestrator/juniauto/db/: __init__.py  client.py  schema.sql
orchestrator/juniauto/execution/: __init__.py  order_manager.py  pdt.py
orchestrator/juniauto/monitoring/: __init__.py  exporter.py  metrics.py
orchestrator/juniauto/replay/: __init__.py  harness.py
orchestrator/juniauto/shadow/: __init__.py  challenger.py  monitor.py
orchestrator/juniauto/signals/: __init__.py  _norm.py  event.py  fundamental.py  liquidity.py  risk.py  semantic.py  technical.py
orchestrator/juniauto/utils/: __init__.py  logging.py  time_utils.py
orchestrator/tests/: test_config_loader.py  test_pdt_tracker.py  test_shadow_monitor.py  test_signals_costs_norm.py  test_signals_technical.py
prometheus/: prometheus.yml
